[package]
name = "tinyklv"
version = "0.0.1-alpha.1"
authors = ["Arpad Voros <arpadav@gmail.com>"]
license = "MIT"
description = ""
repository = "https://github.com/arpadav/tinyklv"
documentation = "https://docs.rs/tinyklv"
readme = "README.md"
# keywords = ["enum", "const", "literals", "macro", "parsing"]
# categories = ["parsing"]
edition = "2021"

[dependencies]
# required
paste = "1.0"
winnow = "0.6"
num-traits = "0.2"
tinyklv-impl = { version = "0.1", path = "impl" }
tinyklv-common = { version = "0.1", path = "common" }
# optional
ascii = "1.1"

[profile.dev]
opt-level = 0

[profile.release]
lto = true
strip = true
opt-level = 3
panic = "abort"
codegen-units = 1