[package]
name = "tinyklv"
version = "0.0.1-alpha.1"
authors = ["Arpad Voros <arpadav@gmail.com>"]
license = "MIT"
description = "The simplest Key-Length-Value (KLV) framework in Rust"
repository = "https://github.com/arpadav/tinyklv"
documentation = "https://docs.rs/tinyklv"
readme = "README.md"
keywords = ["klv", "tlv", "parsing", "decode", "encode"]
categories = ["encoding", "parsing", "development-tools"]
edition = "2021"

[dependencies]
paste = "1.0"
winnow = "0.6"
num-traits = "0.2"
ascii = { version = "1.1", optional = true }
chrono = { version = "0.4", optional = true }
tinyklv-impl = { version = "0.0.1-alpha.1", path = "impl" }
tinyklv-common = { version = "0.0.1-alpha.1", path = "common" }

[dev-dependencies]
rand = "0.8"
rand_distr = "0.4"

[features]
default = []
full = ["chrono", "ascii"]

[profile.dev]
opt-level = 0

[profile.release]
lto = true
strip = true
opt-level = 3
panic = "abort"
codegen-units = 1