[package]
name = "tinyklv-impl"
version = "0.1.0"
authors = ["Arpad Voros <arpadav@gmail.com>"]
license = "MIT"
description = "Implementation detail of the `tinyklv` crate"
repository = "https://github.com/arpadav/tinyklv"
edition = "2021"
publish = false

[lib]
proc-macro = true

[dependencies]
quote = "1.0"
thisenum = "0.1"
thiserror = "1.0"
hashbrown = "0.14"
proc-macro2 = "1.0"
convert_case = "0.6"
symple = { version = "0.1", path = "../symple" }
syn = { version = "1.0", features = ["full", "extra-traits"] }

[dev-dependencies]

[profile.dev]
opt-level = 0

[profile.release]
lto = true
strip = true
opt-level = 3
panic = "abort"
codegen-units = 1