[package]
name = "tinyklv-impl"
version = "0.0.1-alpha.1"
authors = ["Arpad Voros <arpadav@gmail.com>"]
license = "MIT"
description = "Implementation detail of the `tinyklv` crate"
repository = "https://github.com/arpadav/tinyklv"
edition = "2021"
publish = true

[lib]
proc-macro = true

[dependencies]
quote = "1.0"
thisenum = "0.1"
thiserror = "1.0"
hashbrown = "0.14"
proc-macro2 = "1.0"
# symple = { version = "0.1", path = "../symple" }
tinyklv-common = { version = "0.1", path = "../common" }
syn = { version = "1.0", features = ["full", "extra-traits"] }

[dev-dependencies]

[profile.dev]
opt-level = 0

[profile.release]
lto = true
strip = true
opt-level = 3
panic = "abort"
codegen-units = 1