[package]
name = "misb"
version = "0.1.0"
authors = ["Arpad Voros <arpadav@gmail.com>"]
license = "MIT"
description = ""
repository = "https://github.com/arpadav/misb"
documentation = "https://docs.rs/misb"
readme = "README.md"
# keywords = ["enum", "const", "literals", "macro", "parsing"]
# categories = ["parsing", "memory-management"]
edition = "2021"
publish = false

[dependencies]
rand = "0.8"
chrono = "0.4"
winnow = "0.6"
tinyklv = { version = "0.1", path = "../../tinyklv" }

[features]
misb0601-latest = []
latest = [ "misb0601-latest" ]

[profile.dev]
opt-level = 0

[profile.release]
lto = true
strip = true
opt-level = 3
panic = "abort"
codegen-units = 1