[package]
name = "symple"
version = "0.1.0"
authors = ["Arpad Voros <arpadav@gmail.com>"]
license = "MIT"
# description = "Simple Syn"
# repository = "https://github.com/arpadav/symple"
edition = "2021"
publish = false

[dependencies]
quote = "1.0"
proc-macro2 = "1.0"
syn = { version = "1.0", features = ["extra-traits"] }

[dev-dependencies]

[profile.dev]
opt-level = 0

[profile.release]
lto = true
strip = true
opt-level = 3
panic = "abort"
codegen-units = 1