[package]
name = "tinyklv-macros"
version = "0.1.0"
authors = ["Arpad Voros <arpadav@gmail.com>"]
license = "MIT"
description = ""
repository = "https://github.com/arpadav/tinyklv/tinyklv-macros"
documentation = "https://docs.rs/tinyklv-macros"
readme = "README.md"
# keywords = ["enum", "const", "literals", "macro", "parsing"]
# categories = ["parsing", "memory-management"]
edition = "2021"

[lib]
proc-macro = true

[dependencies]
nom = "7.1"
quote = "1.0"
regex = "1.10"
thisenum = "0.1"
thiserror = "1.0"
hashbrown = "0.14"
proc-macro2 = "1.0"
lazy_static = "1.5"
syn = { version = "1.0", features = ["full"] }

[dev-dependencies]

[profile.dev]
opt-level = 0

[profile.release]
lto = true
strip = true
opt-level = 3
panic = "abort"
codegen-units = 1